--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
     }
 
 nav {
-
+    padding : 10px 0px 10px 10px;
     display: flex ;
     justify-content: space-between ;
     align-items: center ;
