--- a/style.css
+++ b/style.css
@@ -12,19 +12,19 @@ header {
     }
 
 nav {
-    padding: 50px;
     display: flex ;
     justify-content: space-between ;
     align-items: center ;
     font-family: "Source Sans 3", sans-serif;
 
     .nav-img {
+        
         height: 2rem ;    
-        margin-bottom:10px;    
+        margin: 10px 10px; 
     }
 
     .nav-ol {
-        padding-right: 50px;
+        margin-right: 10px;
         color:white ;
         list-style: none ;
         display: flex ;
